add java project with on docker